--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Victoreisdavid/nsfw-analyzer-api#readme",
   "dependencies": {
+    "@fastify/cors": "^8.1.0",
     "@fastify/multipart": "^7.1.1",
+    "@fastify/static": "^6.5.0",
     "@tensorflow/tfjs-node": "^3.20.0",
     "fastify": "^4.5.3",
     "fastify-multer": "^2.0.3",
